correct id on div

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       src="./images/fox.jpg"
       alt="A fox next to some flowers - taken by Scott Walsh on Unsplash"
     />
-    <div id="notFox">
+    <div id="not-fox">
       <img
         width="175"
         height="115"
